# glibc

./: .gitignore  configure  configure.ac  meson.build  meson_options.txt
argp/: argp-fmtstream.h  argp-help.c  argp-parse.c  meson.build
benchtests/: bench-memcpy-walk.c  bench-memcpy.c  bench-string.h  meson.build
elf/: Makefile  Versions  dynamic-link.h  libc-abi-dt-relr.c
gnulib/: meson.build
libio/: tst-fseek.c
malloc/: meson.build  tst-malloc-too-large.c
math/: libm-test-driver.c  libm-test-fma.inc  libm-test-sqrt.inc  libm-test-support.c  meson.build  test-nearbyint-except-2.c  test-nearbyint-except.c  test-signgam-main.c  test-snan.c
misc/: tst-dbl-efgcvt.c  tst-dirname.c
picolibc/: argp.h  array_length.h  cross-arm-none-eabi.txt  cross-cortex-m3.txt  cross-cortex-m7.txt  cross-riscv64-unknown-elf.txt  do-arm-configure  do-cortex-m3-configure  do-cortex-m7-configure  do-riscv-configure  error.c  error.h  features.h  getopt.h  getopt_int.h  gettext.h  hacks.h  hp-timing.h  ifunc-impl-list.h  libc-diag.h  mempcpy.h  meson.build  picolibc_mps2_an505.ld  picolibc_mps3_an547.ld  run-arm  run-cortex-m3  run-cortex-m7  run-riscv  run-test  strcase.h  strchrnul.h  support_test_main.c  sysexits.h  test-arm.ld  test-cortex-m3.ld  test-riscv.ld  tininess.h  xunistd.h
picolibc/arm/: libm-test-ulps
picolibc/bits/: getopt_core.h  getopt_ext.h  types.h
picolibc/ctype/: meson.build
picolibc/iconv/: meson.build
picolibc/inet/: meson.build
picolibc/libio/: meson.build  tst-sprintf-ub.c
picolibc/math/: libm-test-driver.c  libm-test-support.c  make-math-test  meson.build  test-double.h  test-fenv-clear-main.c  test-float.h  test-fpucw.c  test-ldouble.h  test-math-errno.h  test-math-exceptions.h  test-math-scalar.h
picolibc/misc/: meson.build  tst-dbl-efgcvt.c  tst-dirname.c  tst-efgcvt-template.c  tst-hsearch.c
picolibc/posix/: error.c  meson.build  sleep.c
picolibc/riscv/: libm-test-ulps
picolibc/setjmp/: meson.build
picolibc/stdlib/: meson.build  tst-strtod-nan-locale-main.c  tst-strtod-nan-sign-main.c  tst-strtod-round-skeleton.c  tst-strtol-locale-main.c
picolibc/string/: meson.build
picolibc/support/: xunistd.h
picolibc/wcsmbs/: meson.build
posix/: meson.build
scripts/: abilist.awk
stdio-common/: meson.build  test-fseek.c  test_rdwr.c  tst-printf.c  tst-rndseek.c  tst-sprintf.c  tst-sscanf.c  tst-swprintf.c  tst-swscanf.c  tst-ungetc.c  tstscanf.c
stdlib/: testdiv.c  tst-strtod-round-skeleton.c  tst-strtod.c  tst-strtod.h
string/: test-memmove.c  test-strcasecmp.c  test-string.h  test-strncasecmp.c
support/: meson.build  support_record_failure.c
sysdeps/arm/: fpu_control.h
